# backchain-plugins

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.claude-plugin/: marketplace.json
diogenes/evals/: README.md  config.yaml  pyproject.toml  run_evals.py
diogenes/evals/fixtures/ai-assisted-but-natural/: submission.md
diogenes/evals/fixtures/ai-slop/: submission.md
diogenes/evals/fixtures/human-voice/: submission.md
engram/evals/: README.md  config.yaml  pyproject.toml  run_evals.py
engram/evals/fixtures/sample-git-state/active-project/: README.md  _setup.sh  notes-uncommitted.md
engram/evals/fixtures/sample-git-state/active-project/outputs/: old-report_2026-04-15.md
engram/evals/fixtures/sample-git-state/clean-project/: README.md  _setup.sh
engram/evals/fixtures/sample-git-state/no-tracker-detected/: README.md  _setup.sh
engram/evals/fixtures/sample-knowledge-tree/respect-auto-memory/docs/: random.md
engram/evals/fixtures/sample-knowledge-tree/respect-auto-memory/outputs/: notes.md
engram/evals/fixtures/sample-knowledge-tree/scan-mixed-tree/: _setup.sh
engram/evals/fixtures/sample-knowledge-tree/scan-mixed-tree/docs/: api-style-guide.md  old-decision-2025-01.md
engram/evals/fixtures/sample-knowledge-tree/scan-mixed-tree/outputs/: morning-brief_2026-04-19.md  strategy-doc_2026-02-26.md
engram/evals/fixtures/sample-knowledge-tree/staging-triage/: _setup.sh
engram/evals/fixtures/sample-memory-dir/checkpoint-append/: _setup.sh
engram/evals/fixtures/sample-memory-dir/checkpoint-fresh/: README.md
(+49 files in other folders)
