[project]
name = "diogenes-evals"
version = "0.1.0"
description = "Evaluation harness for the diogenes plugin's audit skill"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [
    { name = "Chris Krough", email = "dev@krough.org" },
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://backchain.ai"
Repository = "https://github.com/backchainai/backchain-plugins"
