[project]
name = "engram-evals"
version = "0.1.0"
description = "Evaluation harness for the engram plugin's three skills"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [
    { name = "Chris Krough", email = "dev@krough.org" },
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://backchain.ai"
Repository = "https://github.com/backchainai/backchain-plugins"
